# pytemplate

./: Makefile  README.md  init_env  pylintrc  pyproject.toml  setup.py
pytemplate/: __description__.py  __init__.py  __main__.py  __version__.py  description.txt  pytemplate.py
pytemplate/tpl/: Makefile.tpl  pyproject.toml.tpl
